fix layout issue

--- a/src/layouts/DashboardLayout/index.scss
+++ b/src/layouts/DashboardLayout/index.scss
@@ -1,12 +1,3 @@
-.container {
-  display: grid;
-  grid-template-columns:
-    [sidebar-start] min-content [sidebar-end full-start] minmax(6rem, 1fr)
-    [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end])
-    [center-end] minmax(6rem, 1fr)
-    [full-end] !important;
-}
-
 .sidebar {
   grid-column: sidebar-start / sidebar-end;
 }
